# tda-standalone

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: db.rs  log_state.rs  main.rs  models.rs
